charts/redisinsight/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - redisinsight.batsworks.com.br
      secretName: tls-redisinsight
  rules:
    - host: redisinsight.batsworks.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redisinsight
                port:
                  number: 5540
